assignRole, roleMenu